"modify lounge communication"

--- a/app/src/main/res/layout/activity_lounge_introduce.xml
+++ b/app/src/main/res/layout/activity_lounge_introduce.xml
@@ -12,7 +12,6 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:background="#ffffff">
-
         <Button
             android:id="@+id/btn_lounge_back"
             android:layout_width="30dp"
@@ -24,16 +23,14 @@
 
         <TextView
             android:id="@+id/rl_top_bar_lounge_text"
-            android:fontFamily="@font/noto_black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center_horizontal"
-            android:letterSpacing="-0.17"
-            android:lineSpacingExtra="5sp"
             android:text="INNOVATOR CLUB"
             android:lineHeight="20sp"
             android:textColor="#000000"
+            android:textStyle="bold"
             android:textSize="20sp"
             />
 
@@ -61,12 +58,11 @@
             android:layout_marginTop="182.7dp">
 
             <TextView
-                android:fontFamily="@font/noto_bold"
+                android:textStyle="bold"
                 android:id="@+id/tv_lounge_introduce"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:letterSpacing="-0.01"
                 android:lineSpacingExtra="5sp"
                 android:text="소개"
                 android:textColor="#000000"
@@ -83,12 +79,10 @@
             android:layout_marginTop="182.7dp">
 
             <TextView
-                android:fontFamily="@font/noto_regular"
                 android:id="@+id/tv_lounge_calendar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:letterSpacing="-0.01"
                 android:lineSpacingExtra="5sp"
                 android:text="일정"
                 android:lineHeight="20sp"
@@ -117,7 +111,6 @@
             android:background="#f9f9f9">
 
             <TextView
-                android:fontFamily="@font/noto_bold"
                 android:id="@+id/tv_lounge_intro_stop"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -131,7 +124,6 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:fontFamily="@font/noto_bold"
                 android:id="@+id/tv_lounge_intro_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -156,14 +148,12 @@
             android:background="#ffffff">
 
             <TextView
-                android:fontFamily="@font/noto_regular"
                 android:textSize="13sp"
                 android:lineHeight="24sp"
                 android:id="@+id/tv_rl_lounge_introdata"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="14dp"
-                android:letterSpacing="-0.13"
                 android:layout_marginTop="30dp"
                 android:text="이노베이터 클럽은 혁신을 추구하는
 창업가, 스타트업 관계자, 개발자, 디자이너 등
@@ -208,13 +198,17 @@
     </LinearLayout>
 
     //일정
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/ll_lounge_introduce_introduce_schedule"
-        android:visibility="gone"
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="292dp"
+        >
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/ll_lounge_introduce_introduce_schedule"
+        android:visibility="invisible"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         >
 
@@ -226,20 +220,19 @@
             android:background="#f9f9f9">
 
             <TextView
-                android:fontFamily="@font/noto_bold"
+                android:textStyle="bold"
                 android:id="@+id/tv_lounge_calendar_month"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="20.7dp"
-                android:lineSpacingExtra="7sp"
                 android:text="April"
                 android:textColor="#040404"
                 android:lineHeight="20sp"
                 android:textSize="16sp" />
 
             <TextView
-                android:fontFamily="@font/noto_bold"
+                android:textStyle="bold"
                 android:id="@+id/tv_lounge_calendar_year"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -309,4 +302,6 @@
         </RelativeLayout>
 
     </LinearLayout>
+</ScrollView>
+
 </RelativeLayout>
