--- a/app/src/main/res/layout/activity_profile_setting_menu.xml
+++ b/app/src/main/res/layout/activity_profile_setting_menu.xml
@@ -33,6 +33,7 @@
                 android:src="@drawable/ic_chevron_left_black_24dp" />
 
             <TextView
+                android:fontFamily="@font/noto_black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -40,7 +41,6 @@
                 android:gravity="center_horizontal"
                 android:lineHeight="20sp"
                 android:lineSpacingExtra="7sp"
-                android:textStyle="bold"
                 android:text="설정"
                 android:textColor="#040404"
                 android:textSize="15sp" />
@@ -66,23 +66,27 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:fontFamily="@font/noto_bold"
+                    android:lineHeight="31sp"
                     android:background="#ffffff"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:letterSpacing="-0.01"
+                    android:letterSpacing="-0.15"
                     android:lineSpacingExtra="16sp"
                     android:text="이충엽"
                     android:textColor="#000000"
                     android:textSize="15sp" />
 
                 <TextView
+                    android:fontFamily="@font/noto_regular"
+                    android:lineHeight="15sp"
                     android:background="#ffffff"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:lineSpacingExtra="5sp"
                     android:text="gings@gmail.com"
                     android:textColor="#000000"
-                    android:textSize="10sp" />
+                    android:textSize="13sp" />
 
             </LinearLayout>
 
@@ -95,18 +99,18 @@
             android:layout_height="40dp">
 
             <TextView
+                android:fontFamily="@font/noto_bold"
+                android:lineHeight="14sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="40dp"
                 android:background="#ffffff"
-                android:letterSpacing="-0.01"
+                android:letterSpacing="-0.14"
                 android:lineSpacingExtra="1sp"
                 android:text="알림"
-
-                android:textStyle="bold"
                 android:textColor="#c45c55"
-                android:textSize="13sp"/>
+                android:textSize="14sp"/>
 
             <Switch
                 android:id="@+id/sw_profile_setting_menu_alarm"
@@ -115,7 +119,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="27dp"
-                android:shadowColor="#b0caea" />
+                android:shadowColor="#c45c55" />
         </RelativeLayout>
 
         //프로필관리
@@ -128,17 +132,18 @@
             android:orientation="vertical">
 
             <TextView
+                android:fontFamily="@font/noto_bold"
+                android:lineHeight="14sp"
                 android:background="#ffffff"
-
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="40dp"
-                android:letterSpacing="-0.01"
+                android:letterSpacing="-0.14"
                 android:lineSpacingExtra="1sp"
                 android:text="프로필 관리"
-
                 android:textStyle="bold"
-                android:textColor="#c45c55"                android:textSize="13sp" />
+                android:textColor="#c45c55"
+                android:textSize="14sp" />
 
             //프로필 사진변경
             <RelativeLayout
@@ -156,12 +161,14 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:fontFamily="@font/noto_regular"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentStart="true"
                         android:layout_centerVertical="true"
+                        android:lineHeight="14sp"
                         android:background="#ffffff"
-                        android:letterSpacing="-0.01"
+                        android:letterSpacing="-0.13"
                         android:lineSpacingExtra="1sp"
                         android:text="프로필 사진 변경"
                         android:textColor="#999999"
@@ -202,12 +209,14 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:fontFamily="@font/noto_regular"
+                        android:lineHeight="14sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentStart="true"
                         android:layout_centerVertical="true"
                         android:background="#ffffff"
-                        android:letterSpacing="-0.01"
+                        android:letterSpacing="-0.13"
                         android:lineSpacingExtra="1sp"
                         android:text="프로필 정보 수정"
                         android:textColor="#999999"
@@ -246,12 +255,13 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:fontFamily="@font/noto_regular"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentStart="true"
                         android:layout_centerVertical="true"
                         android:background="#ffffff"
-                        android:letterSpacing="-0.01"
+                        android:letterSpacing="-0.13"
                         android:lineSpacingExtra="1sp"
                         android:text="자기소개 수정"
                         android:textColor="#999999"
@@ -291,12 +301,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="40dp"
-                android:letterSpacing="-0.01"
+                android:letterSpacing="-0.14"
                 android:lineSpacingExtra="1sp"
                 android:text="보안"
+                android:lineHeight="14sp"
                 android:textStyle="bold"
                 android:textColor="#c45c55"
-                android:textSize="13sp" />
+                android:textSize="14sp" />
 
             //비밀번호 변경
             <RelativeLayout
@@ -313,12 +324,14 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:fontFamily="@font/noto_regular"
+                        android:lineHeight="14sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentStart="true"
                         android:layout_centerVertical="true"
                         android:background="#ffffff"
-                        android:letterSpacing="-0.01"
+                        android:letterSpacing="-0.13"
                         android:lineSpacingExtra="1sp"
                         android:text="비밀번호 변경"
                         android:textColor="#999999"
@@ -356,23 +369,27 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:fontFamily="@font/noto_regular"
+                        android:lineHeight="14sp"
                         android:layout_marginTop="5dp"
                         android:id="@+id/tv_profile_setting_menu_logout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="#ffffff"
-                        android:letterSpacing="-0.01"
+                        android:letterSpacing="-0.13"
                         android:lineSpacingExtra="1sp"
                         android:text="로그아웃"
                         android:textColor="#999999"
                         android:textSize="13sp" />
 
                     <TextView
+                        android:fontFamily="@font/noto_regular"
+                        android:lineHeight="14sp"
                         android:background="#ffffff"
                         android:layout_below="@+id/tv_profile_setting_menu_logout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:letterSpacing="-0.01"
+                        android:letterSpacing="-0.08"
                         android:lineSpacingExtra="6sp"
                         android:text="gings@gmail.com"
                         android:textColor="#999999"
@@ -410,12 +427,14 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:fontFamily="@font/noto_regular"
+                        android:lineHeight="14sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentStart="true"
                         android:layout_centerVertical="true"
                         android:background="#ffffff"
-                        android:letterSpacing="-0.01"
+                        android:letterSpacing="-0.13"
                         android:lineSpacingExtra="1sp"
                         android:text="탈퇴하기"
                         android:textColor="#999999"
