--- a/app/src/main/res/layout/rv_item_lounge.xml
+++ b/app/src/main/res/layout/rv_item_lounge.xml
@@ -52,8 +52,7 @@
         <TextView
             android:id="@+id/tv_rl_lounge_main_club_name"
             android:layout_toRightOf="@+id/iv_lounge_arrow_left"
-            android:fontFamily="@font/noto_black"
-            android:lineHeight="35sp"
+            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="35sp"
@@ -83,14 +82,11 @@
         android:layout_marginBottom="40dp"
         >
         <TextView
-            android:fontFamily="@font/noto_black"
+            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
-            android:lineHeight="20sp"
             android:textColor="#ff786e"
-            android:letterSpacing="-0.16"
-            android:lineSpacingExtra="5sp"
             android:text="JOIN"
             android:layout_marginLeft="20dp"
             android:layout_centerVertical="true"
@@ -119,13 +115,12 @@
         android:layout_marginBottom="40dp"
         >
         <TextView
-            android:fontFamily="@font/noto_black"
+            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:lineHeight="20sp"
             android:textColor="#000000"
-            android:letterSpacing="-0.16"
             android:lineSpacingExtra="5sp"
             android:text="COMMING SOON"
             android:layout_marginLeft="20dp"
