--- a/app/src/main/res/layout/fragment_lounge.xml
+++ b/app/src/main/res/layout/fragment_lounge.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/rl_frag_lounge_main_all"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rl_frag_lounge_main_all"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
         <RelativeLayout
             android:id="@+id/rl_top_bar_lounge"
@@ -15,40 +14,39 @@
             android:background="#ffffff">
 
             <TextView
-                android:fontFamily="@font/noto_black"
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:gravity="center_horizontal"
-                android:letterSpacing="0.05"
-                android:lineSpacingExtra="5sp"
                 android:text="라운지"
                 android:textColor="#000000"
                 android:lineHeight="20sp"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                />
 
         </RelativeLayout>
-
 
 
     <RelativeLayout
-            android:id="@+id/iv_rv_item_lounge_image"
+        android:id="@+id/iv_rv_item_lounge_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/rl_top_bar_lounge"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="0dp">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_lounge_frag_lounge_list"
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/rl_top_bar_lounge"
-            >
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_lounge_frag_lounge_list"
+        </android.support.v7.widget.RecyclerView>
 
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true">
-
-            </android.support.v7.widget.RecyclerView>
-
-        </RelativeLayout>
+    </RelativeLayout>
     <RelativeLayout
         android:layout_below="@+id/rl_top_bar_lounge"
         android:id="@+id/rl_lounge_club_introduce"
@@ -58,7 +56,7 @@
         android:orientation="vertical"
         >
         <TextView
-            android:fontFamily="@font/noto_bold"
+            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
@@ -71,19 +69,14 @@
             android:layout_marginTop="6dp"
             />
         <TextView
-            android:fontFamily="@font/noto_regular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="13sp"
             android:lineHeight="20sp"
             android:textColor="#000000"
-            android:letterSpacing="-0.13"
-            android:lineSpacingExtra="7sp"
             android:layout_marginLeft="19.5dp"
             android:layout_marginTop="49dp"
-            android:text="관심 있는 클럽에 가입 해
-멤버들과 더욱 긴밀한 교류를
-경험해 보세요."
+            android:text="관심 있는 클럽에 가입 해\n멤버들과 더욱 긴밀한 교류를\n경험해 보세요."
             />
         <View
             android:layout_marginTop="120dp"
