--- a/app/src/main/res/layout/activity_sign_up2.xml
+++ b/app/src/main/res/layout/activity_sign_up2.xml
@@ -26,18 +26,19 @@
         android:layout_width="324dp"
         android:layout_height="48dp">
     <TextView
+      android:gravity="center_vertical"
         android:id="@+id/tv_sign_up2_name"
         android:textSize="14dp"
         android:layout_marginLeft="18dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:textColor="#000000"
         android:text="이름"/>
   <EditText
       android:id="@+id/et_sign_up2_name"
       android:background="@null"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
+      android:layout_width="200dp"
+      android:layout_height="48dp"
       android:hint="깅스"
       android:textSize="14sp"
       android:textColor="#999999"
@@ -51,20 +52,21 @@
         android:layout_width="324dp"
         android:layout_height="48dp">
         <TextView
-            android:layout_marginTop="14dp"
+            android:gravity="center_vertical"
             android:id="@+id/tv_sign_up2_email"
             android:textSize="14dp"
             android:layout_marginLeft="18dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:textColor="#000000"
             android:text="이메일"/>
         <EditText
-            android:layout_marginTop="14dp"
+            android:gravity="center_vertical"
+
             android:id="@+id/et_sign_up2_email"
             android:background="@null"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:hint="gings@gmail.com"
             android:textSize="14sp"
             android:textColor="#999999"
@@ -108,18 +110,20 @@
         android:layout_width="324dp"
         android:layout_height="48dp">
         <TextView
+            android:gravity="center_vertical"
             android:id="@+id/tv_sign_up2_pw"
             android:textSize="14dp"
             android:layout_marginLeft="18dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:textColor="#000000"
             android:text="비밀번호"/>
         <EditText
+            android:gravity="center_vertical"
             android:id="@+id/et_sign_up2_pw"
             android:background="@null"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:hint="숫자,영소문 7글자 조합"
             android:textSize="14sp"
             android:textColor="#999999"
@@ -135,18 +139,20 @@
         android:layout_width="324dp"
         android:layout_height="48dp">
         <TextView
+            android:gravity="center_vertical"
             android:id="@+id/tv_sign_up2_re_pw"
             android:textSize="14dp"
             android:layout_marginLeft="18dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:textColor="#000000"
             android:text="비밀번호 확인"/>
         <EditText
+            android:gravity="center_vertical"
             android:id="@+id/et_sign_up2_re_pw"
             android:background="@null"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:hint="숫자,영소문 7글자 조합"
             android:textSize="14sp"
             android:textColor="#999999"
@@ -158,7 +164,7 @@
         <TextView
             android:layout_marginTop="24dp"
             android:layout_gravity="center"
-            android:id="@+id/tv_sign_up2_available_pw"
+            android:id="@+id/tv_sign_up2_available"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="13sp"
