--- a/app/src/main/res/layout/activity_sign_up3.xml
+++ b/app/src/main/res/layout/activity_sign_up3.xml
@@ -34,18 +34,20 @@
         android:layout_width="324dp"
         android:layout_height="48dp">
         <TextView
+            android:gravity="center_vertical"
             android:id="@+id/tv_sign_up3_confirm_number"
             android:textSize="14dp"
             android:layout_marginLeft="18dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:textColor="#000000"
             android:text="인증번호"/>
         <EditText
+            android:gravity="center_vertical"
             android:id="@+id/et_sign_up3_confirm_number"
             android:background="@null"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="48dp"
             android:hint="000000"
             android:textSize="14sp"
             android:textColor="#999999"
