--- a/app/src/main/res/layout/activity_guestboard_write.xml
+++ b/app/src/main/res/layout/activity_guestboard_write.xml
@@ -38,18 +38,18 @@
                 android:layout_marginLeft="10dp"
                 />
 
-            <Button
+            <TextView
                 android:id="@+id/guest_board_write_confirm_btn"
-                android:layout_width="28dp"
+                android:layout_width="31dp"
                 android:layout_height="match_parent"
-                android:text="완료"
-                android:textColor="@color/colorPrimary"
+                android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="24dp"
-                android:layout_alignParentRight="true"
                 android:background="#ffffff"
-                android:textStyle="bold"
-                />
+                android:text="완료"
+                android:gravity="center"
+                android:textColor="@color/colorPrimary"
+                android:textStyle="bold" />
 
         </RelativeLayout>
 
