--- a/app/src/main/res/layout/activity_detail_board.xml
+++ b/app/src/main/res/layout/activity_detail_board.xml
@@ -246,21 +246,20 @@
                                 android:id="@+id/rl_item_board_like_ic"
                                 android:layout_alignParentLeft="true"
 
-                                android:layout_width="wrap_content"
+                                android:layout_width="15.5dp"
                                 android:layout_height="wrap_content">
 
                                 <ImageView
                                     android:id="@+id/iv_item_board_like"
-                                    android:layout_width="wrap_content"
+                                    android:layout_width="match_parent"
                                     android:layout_height="match_parent"
 
                                     android:src="@drawable/ic_like" />
                                 <ImageView
                                     android:visibility="gone"
                                     android:id="@+id/iv_item_board_like_on"
-                                    android:layout_width="wrap_content"
+                                    android:layout_width="match_parent"
                                     android:layout_height="match_parent"
-
                                     android:src="@drawable/ic_like_on" />
 
                             </RelativeLayout>
@@ -312,20 +311,21 @@
                         </RelativeLayout>
 
                         <ImageView
+                            android:padding="5dp"
                             android:id="@+id/iv_item_board_share"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:layout_centerVertical="true"
                             android:layout_marginStart="10.3dp"
                             android:layout_toRightOf="@id/rl_item_board_comment"
                             android:src="@drawable/bt_share" />
 
                         <ImageView
+                            android:padding="8dp"
                             android:id="@+id/iv_item_board_menu"
-                            android:layout_width="15dp"
-                            android:layout_height="15dp"
+                            android:layout_width="35dp"
+                            android:layout_height="match_parent"
                             android:layout_centerVertical="true"
-                            android:layout_marginStart="15dp"
                             android:layout_toRightOf="@id/iv_item_board_share"
                             android:src="@drawable/bt_more" />
                     </RelativeLayout>
