--- a/app/src/main/res/layout/activity_up_board.xml
+++ b/app/src/main/res/layout/activity_up_board.xml
@@ -459,13 +459,12 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="280dp"
-                android:orientation="vertical"
-                android:padding="8dp">
+                android:orientation="vertical">
 
                 <EditText
                     android:id="@+id/et_up_board_modify"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_margin="20dp"
                     android:background="@null"
                     android:textColor="#000000"
