--- a/app/src/main/res/layout/fragment_home_board.xml
+++ b/app/src/main/res/layout/fragment_home_board.xml
@@ -116,107 +116,113 @@
 
         //*************************************************
 
-        <android.support.v4.widget.NestedScrollView
-            android:id="@+id/nested_home_board"
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/sr_homeboard_refresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-
-            <LinearLayout
+            <android.support.v4.widget.NestedScrollView
+                android:id="@+id/nested_home_board"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@+id/rl_top_bar"
+                android:layout_height="match_parent">
 
 
-                android:layout_marginTop="8dp"
-                android:orientation="vertical">
-
-                <RelativeLayout
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:background="#FFFFFF">
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/rl_top_bar"
 
-                    <ImageView
-                        android:id="@+id/iv_home_board_profile_img"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:layout_alignParentStart="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginStart="12.7dp"
-                        android:src="@drawable/gings_icon" />
+
+                    android:layout_marginTop="8dp"
+                    android:orientation="vertical">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="48dp"
+                        android:background="#FFFFFF">
+
+                        <ImageView
+                            android:id="@+id/iv_home_board_profile_img"
+                            android:layout_width="32dp"
+                            android:layout_height="32dp"
+                            android:layout_alignParentStart="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginStart="12.7dp"
+                            android:src="@drawable/gings_icon" />
+
+                        <View
+                            android:id="@+id/home_board_top_view"
+                            android:layout_width="3dp"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="12.3dp"
+                            android:layout_toRightOf="@+id/iv_home_board_profile_img"
+                            android:background="#f8bab6" />
+
+                        <TextView
+                            android:id="@+id/tv_home_board_write_board"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="6.5dp"
+                            android:layout_toRightOf="@+id/home_board_top_view"
+                            android:background="@null"
+                            android:hint="공유하고싶은 소식을 입력하세요"
+                            android:letterSpacing="-0.01"
+                            android:lineSpacingExtra="2sp"
+                            android:textSize="14sp" />
+                    </RelativeLayout>
 
                     <View
-                        android:id="@+id/home_board_top_view"
-                        android:layout_width="3dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#e2e8ed" />
+
+
+                    <LinearLayout
+                        android:id="@+id/ll_home_board_board_view"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginLeft="12.3dp"
-                        android:layout_toRightOf="@+id/iv_home_board_profile_img"
-                        android:background="#f8bab6" />
+                        android:layout_marginBottom="9.5dp"
+                        android:background="#FFFFFF"
+                        android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/tv_home_board_write_board"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="6.5dp"
-                        android:layout_toRightOf="@+id/home_board_top_view"
-                        android:background="@null"
-                        android:hint="공유하고싶은 소식을 입력하세요"
-                        android:letterSpacing="-0.01"
-                        android:lineSpacingExtra="2sp"
-                        android:textSize="14sp" />
-                </RelativeLayout>
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/rv_item_board_list"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="#e2e8ed" />
+                        </android.support.v7.widget.RecyclerView>
 
+                    </LinearLayout>
 
-                <LinearLayout
-                    android:id="@+id/ll_home_board_board_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="9.5dp"
-                    android:background="#FFFFFF"
-                    android:orientation="vertical">
-
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/rv_item_board_list"
+                    <LinearLayout
+                        android:id="@+id/ll_home_board_board_view_for_search"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="9.5dp"
+                        android:background="#FFFFFF"
+                        android:orientation="vertical">
 
-                    </android.support.v7.widget.RecyclerView>
+                        <android.support.v7.widget.RecyclerView
+                            android:id="@+id/rv_item_board_list_for_search"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+
+                    </LinearLayout>
+
+                    <ImageView
+                        android:id="@+id/iv_home_board_search_fail"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="#f6f6f6"
+                        android:paddingTop="61dp"
+                        android:src="@drawable/img_fail"
+                        android:visibility="gone" />
+
 
                 </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/ll_home_board_board_view_for_search"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="9.5dp"
-                    android:background="#FFFFFF"
-                    android:orientation="vertical">
-
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/rv_item_board_list_for_search"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
-
-                </LinearLayout>
-
-                <ImageView
-                    android:id="@+id/iv_home_board_search_fail"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="#f6f6f6"
-                    android:paddingTop="61dp"
-                    android:src="@drawable/img_fail"
-                    android:visibility="gone" />
-
-
-            </LinearLayout>
-        </android.support.v4.widget.NestedScrollView>
+            </android.support.v4.widget.NestedScrollView>
+        </android.support.v4.widget.SwipeRefreshLayout>
 
 
     </LinearLayout>
