--- a/app/src/main/res/layout/rv_item_board.xml
+++ b/app/src/main/res/layout/rv_item_board.xml
@@ -107,6 +107,14 @@
 
     </RelativeLayout>
 
+
+    <ImageView
+        android:id="@+id/iv_basic_img"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/img_basic_bottom"
+        android:visibility="gone"/>
+
     //contents
     <LinearLayout
         android:id="@+id/ll_item_board_list_contents"
@@ -114,11 +122,14 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+
         <RelativeLayout
             android:id="@+id/item_board_img_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             >
+
+
             <android.support.v4.view.ViewPager
                 android:id="@+id/iv_item_board_contents_image_viewpager"
                 android:layout_width="match_parent"
@@ -152,12 +163,14 @@
             </RelativeLayout>
         </RelativeLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#e2e8ed" />
+
 
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#e2e8ed" />
 
     //profile
     <RelativeLayout
