--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,7 +47,7 @@
         android:textSize="14dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="dlfb77@gmail.com"/>
+        android:text="jemin56@naver.com"/>
     </LinearLayout>
     <LinearLayout
         android:layout_gravity="center"
@@ -77,7 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:text="rla12345"/>
+            android:text="wpals12"/>
     </LinearLayout>
     <TextView
         android:id="@+id/tv_login_login_button"
