--- a/app/src/main/res/layout/activity_profile_setting_menu.xml
+++ b/app/src/main/res/layout/activity_profile_setting_menu.xml
@@ -117,7 +117,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="27dp"
-                android:shadowColor="#b0caea" />
+                android:shadowColor="@color/colorPrimary" />
         </RelativeLayout>
 
         //프로필관리
